<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/near_user_location_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/near_user_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/near_user_location_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_user_location_latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_user_location_latitude_label"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_user_location_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_label"
                app:layout_constraintStart_toEndOf="@id/near_user_location_latitude_label" />

            <TextView
                android:id="@+id/near_user_location_longitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_user_location_longitude_label"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_latitude_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_user_location_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_latitude_label"
                app:layout_constraintStart_toEndOf="@id/near_user_location_longitude_label" />

            <TextView
                android:id="@+id/near_user_location_country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_user_location_country_label"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_longitude_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_user_location_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_longitude_label"
                app:layout_constraintStart_toEndOf="@id/near_user_location_country_label" />

            <TextView
                android:id="@+id/near_user_location_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_user_location_city_label"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_country_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_user_location_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_user_location_country_label"
                app:layout_constraintStart_toEndOf="@id/near_user_location_city_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/near_country_covid_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/near_user_location_card"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/near_country_covid_info_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/near_country_covid_info_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_country_covid_info_infected_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_covid_info_infected_label"
                app:layout_constraintTop_toBottomOf="@id/near_country_covid_info_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_country_covid_info_infected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_country_covid_info_label"
                app:layout_constraintStart_toEndOf="@id/near_country_covid_info_infected_label" />

            <TextView
                android:id="@+id/near_country_covid_info_deaths_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_covid_info_deaths_label"
                app:layout_constraintTop_toBottomOf="@id/near_country_covid_info_infected_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_country_covid_info_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_country_covid_info_infected_label"
                app:layout_constraintStart_toEndOf="@id/near_country_covid_info_deaths_label" />

            <TextView
                android:id="@+id/near_country_covid_info_recovered_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_covid_info_recovered_label"
                app:layout_constraintTop_toBottomOf="@id/near_country_covid_info_deaths_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_country_covid_info_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_country_covid_info_deaths_label"
                app:layout_constraintStart_toEndOf="@id/near_country_covid_info_recovered_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/near_city_covid_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/near_country_covid_info_card"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/near_city_covid_info_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:text="@string/near_city_covid_info_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_city_covid_info_infected_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_covid_info_infected_label"
                app:layout_constraintTop_toBottomOf="@id/near_city_covid_info_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_city_covid_info_infected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_city_covid_info_label"
                app:layout_constraintStart_toEndOf="@id/near_city_covid_info_infected_label" />

            <TextView
                android:id="@+id/near_city_covid_info_deaths_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_covid_info_deaths_label"
                app:layout_constraintTop_toBottomOf="@id/near_city_covid_info_infected_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_city_covid_info_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_city_covid_info_infected_label"
                app:layout_constraintStart_toEndOf="@id/near_city_covid_info_deaths_label" />

            <TextView
                android:id="@+id/near_city_covid_info_recovered_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/near_covid_info_recovered_label"
                app:layout_constraintTop_toBottomOf="@id/near_city_covid_info_deaths_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/near_city_covid_info_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/near_city_covid_info_deaths_label"
                app:layout_constraintStart_toEndOf="@id/near_city_covid_info_recovered_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>